--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack-dev-server --mode development"
   },
   "dependencies": {
+    "moment": "^2.29.1",
     "rxjs": "^5.5.8",
     "ts-loader": "^4.1.0",
     "typescript": "~3.7.5",
